# AIcomp_2026_Planning

./: .gitignore
competition_vehicle_interface/: CMakeLists.txt  package.xml
competition_vehicle_interface/launch/: competition_vehicle_status_bridge.launch
competition_vehicle_interface/scripts/: competition_morai_udp_bridge.py  competition_vehicle_status_bridge.py
global_path_planner/: CMakeLists.txt  package.xml
global_path_planner/docs/: architecture.md
global_path_planner/launch/: control_status_adapter.launch  gpp_local_final.launch  path_maker.launch
global_path_planner/path_data/NOT_USED/: 25molit_ai_mission.txt  25molit_main_mission.txt  path.txt  test.txt
global_path_planner/scripts/: control_status_adapter.py  global_path_publisher.py  path_maker_sm.py
global_path_planner/src/: local_path_selector.cpp
