<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_path_planner</name>
  <version>0.1.0</version>
  <description>Launch-configurable global and local path planning utilities for MORAI competition runs.</description>

  <maintainer email="a@todo.todo">a</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>

  <depend>geometry_msgs</depend>
  <depend>katri_msgs</depend>
  <depend>morai_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>map_server</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export />
</package>
